增加倒计时,进度条增长,背景图切换

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id='begin'>
         <div>快速点击屏幕</br>为力量哥打气</div>
-        <button onclick="play()" id='begin_button'>
+        <button id='begin_button'>
             为力量哥打call
         </button>
         <!-- 滚动条 -->
@@ -27,10 +27,10 @@
         </div>
 
         <div class="button_bar">
-            <button onclick="replay()" id='z_button'>
+            <button onclick="replay()" class='z_button' id="replay">
                 再玩一次
             </button>
-            <button id='z_button'>
+            <button class='z_button' id="goback">
                 返回打call主页
             </button>
         </div>
